Barra de Navegacion
Actualizacion del package.json

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,2 @@
-<header>
-  <h2>Soy el header.</h2>
-</header>
-<router-outlet></router-outlet>
-<footer>
-  <p>soy el footer.</p>
-</footer>
+<app-encabezado></app-encabezado>
+<app-carruzel></app-carruzel>
