--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -26,8 +26,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Iniciar Sesión</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Registrarse</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['registro']">Registrarse</a>
             </li>
 
 
