--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -11,8 +11,8 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Inicio</a>
+            <li class="nav-item"  routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['inicio']">Inicio</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Categorias</a>
@@ -23,8 +23,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Acerca de Nosotros</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Iniciar Sesión</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['iniciar-sesion']">Iniciar Sesión</a> 
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['registro']">Registrarse</a>
