--- a/frontend/src/app/componentes/iniciar-sesion/iniciar-sesion.component.html
+++ b/frontend/src/app/componentes/iniciar-sesion/iniciar-sesion.component.html
@@ -21,7 +21,7 @@
             
             <br>
             <span class="text-light d-block mb-2">¿Aún no eres miembro?</span>            
-            <button type="button" class="btn btn-success">Crear cuenta</button>        
+            <button type="button" class="btn btn-success" routerLink="../registro">Crear cuenta</button>        
         </div>
     </div>
 </div>
