validación de formulario 1.2

--- a/frontend/src/app/componentes/registro/registro.component.css
+++ b/frontend/src/app/componentes/registro/registro.component.css
@@ -38,3 +38,12 @@
   padding: 0px;
   margin: 0px;
 }
+
+.fa-circle {
+  font-size: 25%;
+}
+.invalid-tooltip{
+  padding: 0 1%;
+  text-align: initial;
+  top: 70%;
+}
