--- a/frontend/src/app/componentes/compartidos/carruzel/carruzel.component.html
+++ b/frontend/src/app/componentes/compartidos/carruzel/carruzel.component.html
@@ -1,7 +1,7 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/assets/img/1C.jpg" class="d-block w-100" alt="...">
+            <img src="/assets/img/1C.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
             <img src="/assets/img/2C.jpg" class="d-block w-100" alt="...">
@@ -18,6 +18,7 @@
         <div class="carousel-item">
             <img src="/assets/img/6C.jpg" class="d-block w-100" alt="...">
         </div>
+
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
