Cambio de Opciones de Barra de Navegación
Cambio de barra para usuario registrado/inicio sesión

--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.css
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.css
@@ -25,3 +25,12 @@ p {
     font-weight: bold;
     border: none;
 }
+
+.navbar-collapse {
+    flex-grow: 0;
+}
+
+.lado-derecho {
+    right: 2%;
+    position: fixed;
+}
