--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -9,34 +9,43 @@
         <p>Catus HN</p>
     </div>
 
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav ">
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['inicio']">Inicio</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['productos']">Categorias</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Promociones</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Acerca de Nosotros</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['promocion']">Promociones</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['iniciar-sesion']">Iniciar Sesión</a>
+                <a class="nav-link" [routerLink]="['informacion']">Acerca de Nosotros</a>
             </li>
-            <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['registro']">Registrarse</a>
-            </li>
+
+            <ul class="navbar-nav mr-auto">
+                <ng-container *ngIf="!authService.loggedIn();">
+                    <li class="nav-item" routerLinkActive="active">
+                        <a class="nav-link" [routerLink]="['iniciar-sesion']">Iniciar Sesión</a>
+                    </li>
+                    <li class="nav-item" routerLinkActive="active">
+                        <a class="nav-link" [routerLink]="['registro']">Registrarse</a>
+                    </li>
+                </ng-container>
+
+            </ul>
 
             <li class="nav-item">
                 <a class="nav-link"> </a>
             </li>
 
-
         </ul>
+    </div>
 
+
+    <div class="collapse navbar-collapse lado-derecho">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item" style="width: 200px; ">
                 <div class="input-group flex-nowrap">
@@ -45,35 +54,35 @@
                     </div>
                     <input type="text" class="form-control" placeholder="Buscar Producto" aria-label="Username" aria-describedby="addon-wrapping">
                 </div>
-
             </li>
         </ul>
 
+
+
+        <ul class="navbar-nav mr-auto">
+            <ng-container *ngIf="authService.loggedIn();">
+                <li class="nav-item">
+                    <div class="btn-group" style="padding-right: 10px;">
+                        <button type="button" id="usuario" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
+                 Usuario
+                </button>
+                        <div class="dropdown-menu dropdown-menu-lg-right">
+                            <button class="dropdown-item" type="button">Mi Perfil</button>
+                            <button class="dropdown-item" type="button">Historial de Compras</button>
+                            <button class="dropdown-item" type="button" (click)="authService.logoutUser()">Cerrar Sesión</button>
+                        </div>
+                    </div>
+                </li>
+            </ng-container>
+        </ul>
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <i class="fas fa-shopping-cart" style="margin-left: 10px;margin-top: 5px; size:45px; color:white" id="carro_compra"></i>
-
             </li>
-
         </ul>
 
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <div class="btn-group" style="padding-right: 10px;">
-                    <button type="button" id="usuario" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
-             Usuario
-            </button>
-                    <div class="dropdown-menu dropdown-menu-lg-right">
-                        <button class="dropdown-item" type="button">Mi Perfil</button>
-                        <button class="dropdown-item" type="button">Historial de Compras</button>
-                        <button class="dropdown-item" type="button">Cerrar Sesión</button>
-                    </div>
-                </div>
-
-            </li>
-
-        </ul>
 
     </div>
+
 </nav>
