--- a/frontend/src/app/componentes/inicio/inicio.component.html
+++ b/frontend/src/app/componentes/inicio/inicio.component.html
@@ -1,2 +1,47 @@
 <app-encabezado></app-encabezado>
 <app-carruzel></app-carruzel>
+
+<div class="container">
+
+    <div class="row">
+        <div class="card">
+            <div>
+                <img src="/assets/img/tarjeta1.jpg" class="card-img-top rounded-circle" alt="...">
+            </div>
+            <div class="card-body">
+                <a>Maceteras</a>
+            </div>
+        </div>
+        <div class="card">
+            <div>
+                <img src="/assets/img/tarjeta2.jpg" class="card-img-top rounded-circle" alt="...">
+            </div>
+            <div class="card-body">
+                <a>Arreglos</a>
+            </div>
+        </div>
+        <div class="card">
+            <div>
+                <img src="/assets/img/tarjeta3.jpg" class="card-img-top rounded-circle" alt="...">
+            </div>
+            <div class="card-body">
+                <a>Terrarios</a>
+            </div>
+        </div>
+        <div class="card">
+            <div>
+                <img src="/assets/img/tarjeta4.jpg" class="card-img-top rounded-circle" alt="...">
+            </div>
+            <div class="card-body">
+                <a>Bicicletas</a>
+            </div>
+        </div>
+        <div class="card">
+            <div>
+                <img src="/assets/img/tarjeta5.jpg" class="card-img-top rounded-circle" alt="...">
+            </div>
+            <div class="card-body">
+                <a>Muñequitos</a>
+            </div>
+        </div>
+    </div>
