--- a/frontend/src/app/componentes/productos/productos.component.html
+++ b/frontend/src/app/componentes/productos/productos.component.html
@@ -8,10 +8,14 @@
         <div class="card">
             <div class="card-header">
                 <img src="/assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
+                <h2> Nombre Categoría</h2>
             </div>
             <div class="card-body">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo mollitia tempore reiciendis, vel, sequi.
+                    Especie:
+                </p>
+                <p>
+                    Genero:
                 </p>
                 <a href="#" class="btn">Ver Producto</a>
             </div>
@@ -19,10 +23,14 @@
         <div class="card">
             <div class="card-header">
                 <img src="/assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
+                <h2> Nombre Categoría</h2>
             </div>
             <div class="card-body">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo mollitia tempore reiciendis, vel, sequi.
+                    Especie:
+                </p>
+                <p>
+                    Genero:
                 </p>
                 <a href="#" class="btn">Ver Producto</a>
             </div>
@@ -30,10 +38,14 @@
         <div class="card">
             <div class="card-header">
                 <img src="/assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
+                <h2> Nombre Categoría</h2>
             </div>
             <div class="card-body">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo mollitia tempore reiciendis, vel, sequi.
+                    Especie:
+                </p>
+                <p>
+                    Genero:
                 </p>
                 <a href="#" class="btn">Ver Producto</a>
             </div>
@@ -41,10 +53,14 @@
         <div class="card">
             <div class="card-header">
                 <img src="/assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
+                <h2> Nombre Categoría</h2>
             </div>
             <div class="card-body">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo mollitia tempore reiciendis, vel, sequi.
+                    Especie:
+                </p>
+                <p>
+                    Genero:
                 </p>
                 <a href="#" class="btn">Ver Producto</a>
             </div>
