--- a/frontend/src/app/componentes/iniciar-sesion/iniciar-sesion.component.html
+++ b/frontend/src/app/componentes/iniciar-sesion/iniciar-sesion.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid min-vh-100 p-0 d-flex align-items-center justify-content-center fondo-inicio">
     <div class="row w-100">
-        <div class="mx-auto col-10 col-sm-8 col-md-6 col-lg-4 text-center pb-5 pt-2 px-3 rounded fondo-formulario">
-            <div class="container my-0 icono-formulario">
+        <div class="mx-auto col-10 col-sm-8 col-md-6 col-lg-4 text-center pb-4 pt-0 px-3 rounded fondo-formulario">
+            <div class="container py-0 my-0 icono-formulario">
                 <i class="far fa-user-circle"></i>
             </div>
-            <div class="text-light mt-0 mb-5">
+            <div class="text-light mt-0 mb-3">
                 <h6>INICIAR SESIÓN</h6>
             </div>
             
@@ -12,34 +12,38 @@
                 <div class="form-group">
                     <input type="email" class="form-control" [class.is-invalid]="validarCampo('correo')" formControlName="correo" name="correo" required placeholder="Correo electrónico">
                                         
-                    <div class="invalid-feedback" *ngIf="correo.errors?.required">
+                    <div class="invalid-feedback text-warning" *ngIf="correo.errors?.required">
                         Debe ingresar su correo electrónico                
                     </div>
-                    <div class="invalid-feedback" *ngIf="correo.errors?.pattern">
+                    <div class="invalid-feedback text-warning" *ngIf="correo.errors?.pattern">
                         Ingrese una dirección de correo válida
                     </div>                    
                 </div>
 
                 <div class="form-group">
-                    <input type="password" class="form-control" [class.is-invalid]="validarCampo('contrasena')" formControlName="contrasena" name="contrasena" required placeholder="Contraseña">
+                    <input type="password" class="form-control" [class.is-invalid]="validarCampo('contrasenia')" formControlName="contrasenia" name="contrasenia" required placeholder="Contraseña">
                     
-                    <div class="invalid-feedback">
+                    <div class="invalid-feedback text-warning">
                         Debe ingresar su contraseña 
                     </div>
                 </div>
 
-                <div class="invalid-feedback mb-2" [class.d-block]="errorCredenciales">
+                <!-- <div class="invalid-feedback mb-2" [class.d-block]="errorCredenciales">
                     Credenciales no válidas 
-                </div> 
+                </div> --> 
+
+                <div class="invalid-feedback mb-2 text-warning" [class.d-block]="errorCredenciales">
+                    Credenciales no válidas
+                </div>
 
                 <div class="form-group">
-                    <button type="submit" class="btn btn-success">Entrar</button>
+                    <button type="submit" class="btn-success btn w-50">Entrar</button>
                 </div>                
             </form>
             
             <br>
             <span class="text-light d-block mb-2">¿Aún no eres miembro?</span>            
-            <button type="button" class="btn btn-success" routerLink="../registro">Crear cuenta</button>        
+            <button type="button" class="btn btn-success w-50" routerLink="../registro">Crear cuenta</button>        
         </div>
     </div>
 </div>
