--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -13,25 +13,25 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ">
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['inicio']">Inicio</a>
+                <a class="nav-link" [routerLink]="['/inicio']">Inicio</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['productos']">Categorias</a>
+                <a class="nav-link" [routerLink]="['/productos']">Categorias</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['promocion']">Promociones</a>
+                <a class="nav-link" [routerLink]="['/promocion']">Promociones</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['informacion']">Acerca de Nosotros</a>
+                <a class="nav-link" [routerLink]="['/informacion']">Acerca de Nosotros</a>
             </li>
 
             <ul class="navbar-nav mr-auto">
                 <ng-container *ngIf="!authService.loggedIn();">
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" [routerLink]="['iniciar-sesion']">Iniciar Sesión</a>
+                        <a class="nav-link" [routerLink]="['/iniciar-sesion']">Iniciar Sesión</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" [routerLink]="['registro']">Registrarse</a>
+                        <a class="nav-link" [routerLink]="['/registro']">Registrarse</a>
                     </li>
                 </ng-container>
 
@@ -66,8 +66,8 @@
                         <button type="button" id="usuario" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
                  Usuario
                 </button>
-                        <div class="dropdown-menu dropdown-menu-lg-right">
-                            <button class="dropdown-item" type="button">Mi Perfil</button>
+                        <div class="dropdown-menu dropdown-menu-lg-right" routerLinkActive="active">
+                            <button class="dropdown-item" type="button" [routerLink]="['/perfil']">Mi Perfil</button>
                             <button class="dropdown-item" type="button">Historial de Compras</button>
                             <button class="dropdown-item" type="button" (click)="authService.logoutUser()">Cerrar Sesión</button>
                         </div>
