--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -6,7 +6,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
     <div class="collapse navbar-collapse">
-        <p>Catus HN</p>
+        <p>Cactus HN</p>
     </div>
 
 
@@ -16,7 +16,7 @@
                 <a class="nav-link" [routerLink]="['inicio']">Inicio</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['productos']">Categorias</a>
+                <a class="nav-link" [routerLink]="['productos']">Categorías</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['promocion']">Promociones</a>
