--- a/frontend/src/app/componentes/registro/registro.component.html
+++ b/frontend/src/app/componentes/registro/registro.component.html
@@ -65,8 +65,7 @@
                         <a class="mt-2"><small>¿Ya tienes una cuenta?</small></a>
                     </div>
                     <div>
-                        <button 
-                        class="btn btn-primary  w-50" type="button">Iniciar sesión</button>
+                        <button class="btn btn-primary  w-50" type="button" routerLinkActive="active" [routerLink]="['/iniciar-sesion']">Iniciar sesión</button>
                     </div>
                 </div>
             </div>
