cambiamos en el app.yaml frontend

--- a/frontend/src/app/componentes/compartidos/carruzel/carruzel.component.html
+++ b/frontend/src/app/componentes/compartidos/carruzel/carruzel.component.html
@@ -1,22 +1,22 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/assets/img/1C.png" class="d-block w-100" alt="...">
+            <img src="assets/img/1C.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/assets/img/2C.jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/2C.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/assets/img/3C.jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/3C.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/assets/img/4C.jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/4C.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/assets/img/5C.jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/5C.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/assets/img/6C.jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/6C.jpg" class="d-block w-100" alt="...">
         </div>
 
     </div>
