--- a/frontend/src/app/componentes/perfil/perfil.component.html
+++ b/frontend/src/app/componentes/perfil/perfil.component.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="profile-img">
-                    <img src="/assets/img/usuario.png" alt="" style="width: 150px; height: 150px;">
+                    <img src="assets/img/usuario.png" alt="" style="width: 150px; height: 150px;">
                     <div class="file btn btn-lg btn-primary">
                         Cambiar Foto
                         <input type="file" name="file" />
