--- a/frontend/src/app/componentes/compartidos/carrusel-promo/carrusel-promo.component.html
+++ b/frontend/src/app/componentes/compartidos/carrusel-promo/carrusel-promo.component.html
@@ -1,16 +1,16 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/assets/img/anuncio1.jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/anuncio1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/assets/img/anuncio2.jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/anuncio2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/assets/img/anuncio3.jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/anuncio3.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="/assets/img/anuncio4.jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/anuncio4.jpg" class="d-block w-100" alt="...">
         </div>
 
     </div>
