--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light " style="background-color: #50a1a5!important;">
     <a class="navbar-brand" [routerLink]="['/inicio']">
-        <img src="/assets/img/logo_vector.png" width="40" height="40" alt="" loading="lazy">
+        <img src="assets/img/logo_vector.png" width="40" height="40" alt="" loading="lazy">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
