--- a/frontend/src/app/componentes/inicio/inicio.component.html
+++ b/frontend/src/app/componentes/inicio/inicio.component.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="card">
             <div>
-                <img src="/assets/img/tarjeta1.jpg" class="card-img-top rounded-circle" alt="...">
+                <img src="assets/img/tarjeta1.jpg" class="card-img-top rounded-circle" alt="...">
             </div>
             <div class="card-body">
                 <a>Maceteras</a>
@@ -14,7 +14,7 @@
         </div>
         <div class="card">
             <div>
-                <img src="/assets/img/tarjeta2.jpg" class="card-img-top rounded-circle" alt="...">
+                <img src="assets/img/tarjeta2.jpg" class="card-img-top rounded-circle" alt="...">
             </div>
             <div class="card-body">
                 <a>Arreglos</a>
@@ -22,7 +22,7 @@
         </div>
         <div class="card">
             <div>
-                <img src="/assets/img/tarjeta3.jpg" class="card-img-top rounded-circle" alt="...">
+                <img src="assets/img/tarjeta3.jpg" class="card-img-top rounded-circle" alt="...">
             </div>
             <div class="card-body">
                 <a>Terrarios</a>
@@ -30,7 +30,7 @@
         </div>
         <div class="card">
             <div>
-                <img src="/assets/img/tarjeta4.jpg" class="card-img-top rounded-circle" alt="...">
+                <img src="assets/img/tarjeta4.jpg" class="card-img-top rounded-circle" alt="...">
             </div>
             <div class="card-body">
                 <a>Bicicletas</a>
@@ -38,7 +38,7 @@
         </div>
         <div class="card">
             <div>
-                <img src="/assets/img/tarjeta5.jpg" class="card-img-top rounded-circle" alt="...">
+                <img src="assets/img/tarjeta5.jpg" class="card-img-top rounded-circle" alt="...">
             </div>
             <div class="card-body">
                 <a>Muñequitos</a>
