--- a/frontend/src/app/componentes/productos/productos.component.html
+++ b/frontend/src/app/componentes/productos/productos.component.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="card">
             <div class="card-header">
-                <img src="/assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
+                <img src="assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
                 <h2> Nombre Categoría</h2>
             </div>
             <div class="card-body">
@@ -22,7 +22,7 @@
         </div>
         <div class="card">
             <div class="card-header">
-                <img src="/assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
+                <img src="assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
                 <h2> Nombre Categoría</h2>
             </div>
             <div class="card-body">
@@ -37,7 +37,7 @@
         </div>
         <div class="card">
             <div class="card-header">
-                <img src="/assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
+                <img src="assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
                 <h2> Nombre Categoría</h2>
             </div>
             <div class="card-body">
@@ -52,7 +52,7 @@
         </div>
         <div class="card">
             <div class="card-header">
-                <img src="/assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
+                <img src="assets/img/Cat1.jpg" class="card-img-top rounded-circle" alt="...">
                 <h2> Nombre Categoría</h2>
             </div>
             <div class="card-body">
