--- a/frontend/src/app/componentes/iniciar-sesion/iniciar-sesion.component.css
+++ b/frontend/src/app/componentes/iniciar-sesion/iniciar-sesion.component.css
@@ -15,3 +15,22 @@
     padding: 0px;
     margin: 0px;
 }
+
+.btn:hover{
+    background-color: #9cd6d7;
+    color: #274f52;
+}
+  
+.btn {
+    background-color: #50a1a5;
+    border: none;
+}
+.btn:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.btn:active {
+    background-color: #9cd6d7 !important;
+    color: #274f52 !important;
+}
