--- a/frontend/src/app/componentes/registro/registro.component.html
+++ b/frontend/src/app/componentes/registro/registro.component.html
@@ -1,3 +1,6 @@
+<div class="encabezado w-100">
+    <app-encabezado class="fade-in"></app-encabezado>
+</div>
 <div class="doc">
        <div class="col-10 col-sm-7 col-md-6 col-lg-4 col-xl-4 mr-auto ml-auto formulario" style="min-width: 280px; border: none;">
         <form style="max-height: 800px;" class="needs-validation pl-5 pr-5  rounded text-center" [formGroup]="formularioRegistro" validate>
