--- a/frontend/src/app/componentes/iniciar-sesion/iniciar-sesion.component.html
+++ b/frontend/src/app/componentes/iniciar-sesion/iniciar-sesion.component.html
@@ -1,3 +1,6 @@
+<div class="encabezado w-100">
+    <app-encabezado class="fade-in"></app-encabezado>
+</div>
 <div class="container-fluid min-vh-100 p-0 d-flex align-items-center justify-content-center fondo-inicio">
     <div class="row w-100">
         <div class="mx-auto col-10 col-sm-8 col-md-6 col-lg-4 text-center pb-4 pt-0 px-3 rounded fondo-formulario">
