--- a/frontend/src/app/componentes/registro/registro.component.css
+++ b/frontend/src/app/componentes/registro/registro.component.css
@@ -2,7 +2,7 @@
 .doc{
   display: flex;
   flex-flow: column wrap;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   justify-content: center;
   align-items: center;
@@ -47,3 +47,4 @@
   text-align: initial;
   top: 70%;
 }
+
