--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+.encabezado{
+    position: relative;
+  }
+  
+  .fade-in{
+      opacity: 0;
+      transition: position 0.5s, opacity 0.5s ease-in-out;
+      position: absolute;
+      z-index: 1;
+  }
+  
+  .encabezado:hover .fade-in {
+      opacity: 1;
+      /* position: relative; */
+  }
+  
+  app-encabezado{
+      width: 100%;
+  }
