--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -68,7 +68,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <i class="fas fa-shopping-cart" style="margin-left: 10px;margin-top: 0px; size:45px; color:white" id="carro_compra"></i>
+                    <i class="fas fa-shopping-cart" id="carro_compra"></i>
                 </li>
             </ul>
 
