--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-xl navbar-dark bg-dark" style="background-color: #50a1a5!important;">
+<nav *ngIf="isCustomer" class="navbar navbar-expand-xl navbar-dark bg-dark" style="background-color: #50a1a5!important;">
     <a class="navbar-brand" [routerLink]="['/inicio']">
         <img src="/assets/img/logo_vector.png" width="40" height="40" alt="" loading="lazy">
     </a>
