--- a/frontend/src/app/componentes/administrador/inventario/inventario.component.html
+++ b/frontend/src/app/componentes/administrador/inventario/inventario.component.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <h1 class="pt-2 pl-2">INVENTARIO DE PRODUCTOS</h1>
+        <h4 class="pt-2 pl-2">INVENTARIO DE PRODUCTOS</h4>
         <hr>
     </div>
     <div>
@@ -15,9 +15,36 @@
                   <tr>
                     <th scope="col">#</th>
                     <th scope="col">Imagen</th>
-                    <th scope="col">Nombre</th>
+                    <th scope="col">Nombre
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm  dropdown-toggle dropdown-toggle-split p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <i class="fa fa-filter"  aria-hidden="true" style="font-size: 95%;"></i>
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-left p-0">
+                          <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Buscar" aria-label="Buscar" aria-describedby="button-addon2">
+                            <div class="input-group-append">
+                              <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fa fa-search" aria-hidden="true"></i></button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </th>
                     <th scope="col">Descripción</th>
-                    <th scope="col">Categoría</th>
+                    <th scope="col">Categoría 
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm  dropdown-toggle dropdown-toggle-split p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <i class="fa fa-filter"  aria-hidden="true" style="font-size: 95%;"></i>
+                        </button>
+                        <div class="dropdown-menu p-0">
+                          <select class="custom-select" size="3">
+                            <option value="1">Injerto</option>
+                            <option value="2">Terrario colgante</option>
+                            <option value="3">Mini terrario</option>
+                          </select>
+                        </div>
+                      </div>
+                    </th>
                     <th scope="col">Cantidad</th>
                     <th scope="col">Precio</th>
                   </tr>
